--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "blue-tape": "^0.2.0",
     "chai": "^3.5.0",
+    "lodash": "^4.15.0",
     "mocha": "^2.4.5",
     "onchange": "^2.1.2",
     "tap-spec": "^4.1.1",
